--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Webify",
   "license": "ISC",
   "dependencies": {
+    "request-promise": "^4.2.2",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
